--- a/src/all-components/home/Home.css
+++ b/src/all-components/home/Home.css
@@ -1,11 +1,22 @@
-.video-container video {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
+#app { height: 100% }
+html,
+body {
+  position: relative;
+  height: 100%;
 }
 
-@media (max-width: 600px) {
-    .video-container video {
-        height: 450px;
-    }
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
 }
