--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,11 @@ body {
   padding: 0;
   overflow-x: hidden;
 }
+body {
+    background-image: url('./assets/images/bgMain.png'); /* ইমেজ ফাইলের সঠিক পাথ ব্যবহার করুন */
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    margin: 0;
+    min-height: 100vh;
+}
