--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap');
+body {
+  margin: 0;
+  overflow-x: hidden; /* Horizontal scrollbar বন্ধ */
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 
 body {
