--- a/src/all-components/global-css/globle.css
+++ b/src/all-components/global-css/globle.css
@@ -1,9 +1,9 @@
-body {
-  margin: 0;
-  overflow-x: hidden; /* Horizontal scrollbar বন্ধ */
-}
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap');
+
+
+.for_use_font_class {
+  font-family: "Cinzel", serif;
+  font-optical-sizing: auto;
+  
 }
