--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,27 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100..900;1,100..900&display=swap');
-body {
-  margin: 0;
-  overflow-x: hidden; /* Horizontal scrollbar বন্ধ */
-}
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
-
-
 body {
   font-family: "Exo", sans-serif;
   font-optical-sizing: auto;
-  
-}
-html,
-body {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-body {
-    background-image: url('./assets/images/bgMain.png'); /* ইমেজ ফাইলের সঠিক পাথ ব্যবহার করুন */
+  background-image: url('./assets/images/bgMain.png'); /* ইমেজ ফাইলের সঠিক পাথ ব্যবহার করুন */
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
     margin: 0;
     min-height: 100vh;
+    overflow-x: hidden;
 }
+html, body {
+  margin: 0;
+  padding: 0;
+  
+  min-height: 100vh;
+}
+
+
